// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > has 'base' ('md') button 1`] = `
<DocumentFragment>
  <button
    class="btn btn-md"
  >
    base button
  </button>
</DocumentFragment>
`;

exports[`Button > has 'large' ('lg') button 1`] = `
<DocumentFragment>
  <button
    class="btn btn-lg"
  >
    large button
  </button>
</DocumentFragment>
`;

exports[`Button > has 'small' ('sm') button 1`] = `
<DocumentFragment>
  <button
    class="btn btn-sm"
  >
    small button
  </button>
</DocumentFragment>
`;

exports[`Button > has 'tiny' ('xs') button 1`] = `
<DocumentFragment>
  <button
    class="btn btn-xs"
  >
    tiny button
  </button>
</DocumentFragment>
`;

exports[`Button > has a label 1`] = `
<DocumentFragment>
  <button
    class="btn min-h-fit h-10"
  >
    Hello, World 🌍
  </button>
</DocumentFragment>
`;

exports[`Button > has a slot to render a 'link' tag 1`] = `
<DocumentFragment>
  <a
    class="btn min-h-fit h-10"
    role="none"
  >
    Button as link
  </a>
</DocumentFragment>
`;

exports[`Button > has a slot to render a 'paragraph' tag 1`] = `
<DocumentFragment>
  <p
    class="btn min-h-fit h-10"
    role="none"
  >
    Button as paragraph
  </p>
</DocumentFragment>
`;

exports[`Button > has a slot to render a 'span' tag 1`] = `
<DocumentFragment>
  <span
    class="btn min-h-fit h-10"
    role="none"
  >
    Button as span
  </span>
</DocumentFragment>
`;

exports[`Button > has accent variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-accent min-h-fit h-10"
  >
    accent button
  </button>
</DocumentFragment>
`;

exports[`Button > has default variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-default min-h-fit h-10"
  >
    default button
  </button>
</DocumentFragment>
`;

exports[`Button > has error variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-error min-h-fit h-10"
  >
    error button
  </button>
</DocumentFragment>
`;

exports[`Button > has ghost variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-ghost min-h-fit h-10"
  >
    ghost button
  </button>
</DocumentFragment>
`;

exports[`Button > has info variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-info min-h-fit h-10"
  >
    info button
  </button>
</DocumentFragment>
`;

exports[`Button > has link variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-link min-h-fit h-10"
  >
    link button
  </button>
</DocumentFragment>
`;

exports[`Button > has neutral variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-neutral min-h-fit h-10"
  >
    neutral button
  </button>
</DocumentFragment>
`;

exports[`Button > has no outline 1`] = `
<DocumentFragment>
  <button
    class="btn min-h-fit h-10"
  >
    Button has no outline
  </button>
</DocumentFragment>
`;

exports[`Button > has outline 1`] = `
<DocumentFragment>
  <button
    class="btn btn-outline min-h-fit h-10"
  >
    Button has outline
  </button>
</DocumentFragment>
`;

exports[`Button > has primary variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-primary min-h-fit h-10"
  >
    primary button
  </button>
</DocumentFragment>
`;

exports[`Button > has secondary variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-secondary min-h-fit h-10"
  >
    secondary button
  </button>
</DocumentFragment>
`;

exports[`Button > has success variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-success min-h-fit h-10"
  >
    success button
  </button>
</DocumentFragment>
`;

exports[`Button > has warning variant 1`] = `
<DocumentFragment>
  <button
    class="btn btn-warning min-h-fit h-10"
  >
    warning button
  </button>
</DocumentFragment>
`;

exports[`Button > is not wide 1`] = `
<DocumentFragment>
  <button
    class="btn min-h-fit h-10"
  >
    Button is not wide
  </button>
</DocumentFragment>
`;

exports[`Button > is wide 1`] = `
<DocumentFragment>
  <button
    class="btn btn-wide min-h-fit h-10"
  >
    Button is wide
  </button>
</DocumentFragment>
`;
